# nb

./: .gitignore  LICENSE.md  Makefile  README.md  pyproject.toml
altair/: altair_cartographic.py  altair_data_transformation.py  altair_debugging.py  altair_interaction.py  altair_introduction.py  altair_marks_encoding.py  altair_scales_axes_legends.py  altair_view_composition.py  requirements.txt
barba/: 00_Quick_Python_Intro.py  01_Step_1.py  02_Step_2.py  03_CFL_Condition.py  04_Step_3.py  05_Step_4.py  06_Array_Operations_with_NumPy.py  07_Step_5.py  08_Step_6.py  09_Step_7.py  10_Step_8.py  11_Defining_Function_in_Python.py  12_Step_9.py  13_Step_10.py  14_Step_11.py  15_Step_12.py
bib/: marimo.bib  nbSLR.bib
brooks/: README.md
chen/: 01-timing.py  README.md
davis/cs109/harmonics/: harmonics.ipynb
davis/cs109/lab01/: formulae.ipynb
davis/cs109/lab02/: special.ipynb
davis/cs109/lab11/: distance.m  quake.ipynb  quake.m
davis/cs109/lab12/: life.ipynb
davis/cs109/physics/: climate-eqns.ipynb  climate.ipynb  physics.ipynb
davis/cs199/extras/astronomical-image-classification/: svm-image-classification.ipynb
davis/cs199/lesson0/: basic-python-demo.ipynb
davis/cs199/lesson1/: collecting-organizing-analyzing-data.ipynb
davis/cs199/lesson2/: Image Processing.ipynb
davis/cs199/lesson3/: scrubbing-data-visualization.ipynb
davis/cs199/lesson4/: Image Processing.ipynb
davis/cs199/lesson5/: Text Mining.ipynb
davis/cs199/lesson5/img/: flowchart-program.tex  markov-chain.tex
davis/cs199/lesson6/: Monitoring Online Data Sources.ipynb  bokeh.ipynb
davis/cs199/lesson6/urbana/: main.py
davis/cs199/lesson7/: working-with-large-data.ipynb
des/: 01_basic_ideas.py  06_pooled_vs_separate.py  12_rush_hour.py  Makefile  README.md  arrival_process.py  braess_paradox.py  convoy_effect.py  inspectors_paradox.py  late_merge.py  littles_law.py  mm1_nonlinearity.py  pooled_vs_separate.py  priority_starvation.py  queue_formation.py  requirements.txt  rush_hour.py  server_utilization.py  sojourn_time.py  tandem_queue.py
des/output/: braess_paradox.html  braess_paradox.txt  convoy_effect.html  convoy_effect.txt  inspectors_paradox.html  inspectors_paradox.txt  late_merge.html  late_merge.txt  littles_law.html  littles_law.txt  mm1_nonlinearity.html  mm1_nonlinearity.txt  pooled_vs_separate.html  pooled_vs_separate.txt  priority_starvation.html  priority_starvation.txt  rush_hour.html  rush_hour.txt  tandem_queue.html  tandem_queue.txt
docs/: blank-doug-2026-02-20.md  index.html  konovalov-olexandr-2026-03-02.md  learner-profiles.md  moore-jason-2026-02-19.md  nino-jose-2026-03-02.md  sinsniwal-mohit-2026-03-02.md  turtle.html  wickes-elizabeth-2026-02-20.md
gis/: 01-intro-raster-data.py  04-geo-landscape.py  05-access-data.py  07-vector-data-in-python.py  08-crop-raster-data.py  09-raster-calculations.py  10-zonal-statistics.py  11-parallel-raster-computations.py  12-data-cube.py
images/: test.py
jenkins/: All_Even-Even_Nuclei.UNEDF0-cut.txt  All_Even-Even_Nuclei.UNEDF0.txt  README.md  mass16round-sum.txt  notebook.py
jenkins/original/: 4th year course.2025.Lecture1-03.ipynb
js/: package-lock.json
js/src/: multiple-choice.js  styles.css
kamvar/: README.md
kis/: graphcastgfs.t00z.pgrb2.0p25_251029.f000.5b7b6.idx  metr.py  metr3113_fa25_python_activity_full.ipynb  requirements.txt
mew/: README.md  __init__.py  concept_map.py  flashcard.py  labeling.py  matching.py  mew_examples.py  multiple_choice.py  ordering.py  pyproject.toml
mew/js/: build.js  package.json
mew/js/src/: concept-map.js  flashcard.js  labeling.js  matching.js  multiple-choice.js  ordering.js  styles.css
mew/tests/: __init__.py  test_concept_map.py  test_flashcard.py  test_multiple_choice.py  test_ordering.py
nederbragt/: 04.01.html  05.01.html  34.oppgaver-losning.ipynb  34.oppgaver.ipynb  34.samkoding.ipynb  34.samkoding_new_H26.ipynb  36.samkoding.ipynb  README.md  ecoli_39_grader.csv  ovingsoppgaver.34-losning.ipynb  ovingsoppgaver.34.ipynb
pages/: marimo-for-educators.md
parallel/: index.md  parallel.py  requirements.txt  using_dagster.py  using_luigi.py  using_metaflow.py
pogil/: README.md
sql/: 01_basic_select.py  02_filter.py  03_aggregate_group.py  04_null.py  05_join.py  06_keys.py  Makefile  index.md  lesson_01_basic_select.py  lesson_02_filter.py  lesson_03_aggregate_group.py  lesson_04_null.py  penguins.db  select_01.py  select_02.py  simple_select.py  survey.db
sql/penguins/: create-db.sql
sql/survey/: create-db.sql
src/mew/: labeling.py  matching.py  multiple_choice.py  ordering.py
styling/: styling.py
tests/: test_matching.py
turtle/: example.py  turtle.py
veitch-michaelis/: README.md
walters/: README.md  clustering.py  reos.py  requirements.txt  scatterplot.py
