[project]
name = "mew"
version = "0.1.0"
description = "notebook experimentation"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Greg Wilson", email = "gvwilson@third-bit.com"},
]
license = {text = "MIT"}
dependencies = [
    "altair>=6.0.0",
    "anthropic>=0.84.0",
    "anywidget>=0.9.21",
    "asimpy>=0.14.0",
    "cartopy>=0.25.0",
    "cfgrib>=0.9.15.1",
    "dagster>=1.12.17",
    "duckdb>=1.4.4",
    "faker>=40.5.1",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.4",
    "luigi>=3.7.3",
    "marimo>=0.19.9",
    "matplotlib>=3.10.8",
    "metaflow>=2.19.20",
    "metpy>=1.7.1",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "polars>=1.38.1",
    "pydantic-ai-slim>=1.67.0",
    "seaborn>=0.13.2",
    "sqlglot>=29.0.1",
    "traitlets>=5.14.3",
    "vega-datasets>=0.9.0",
    "xarray>=2026.2.0",
]

[dependency-groups]
dev = [
    "build>=1.4.0",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "taskipy>=1.14.1",
    "twine>=6.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mew"]
exclude = [
    "mew/tests",
    "mew/mew_examples.py",
    "mew/js/src",
    "mew/js/build.js",
    "mew/js/package.json",
    "mew/js/package-lock.json",
    "mew/js/node_modules",
]
artifacts = [
    "mew/js/dist/*.js",
    "mew/js/dist/*.js.map",
]

# For sdist, explicitly include these
[tool.hatch.build.targets.sdist]
artifacts = [
    "mew/js/dist/*.js",
    "mew/js/dist/*.js.map",
]

[tool.taskipy.tasks]
build = {help = "build package", cmd = """
cd mew/js &&
npm run build &&
cd - &&
python -m build
"""}
check = {help = "check code issues", cmd = "ruff check ."}
clean = {help = "clean up", cmd = """
rm -rf ./dist &&
find . -path './.venv' -prune -o -type d -name '__pycache__' -exec rm -rf {} + &&
find . -path './.venv' -prune -o -type f -name '*~' -exec rm {} +
"""}
fix = {help = "fix code issues", cmd = "ruff check --fix ."}
format = {help = "format code", cmd = "ruff format ."}
test = {help = "run tests", cmd = "pytest mew/tests"}
