[project]
name = "nb"
version = "0.1.0"
description = "notebook experimentation"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Greg Wilson", email = "gvwilson@third-bit.com"},
]
license = {text = "MIT"}
dependencies = [
    "altair>=6.0.0",
    "anthropic>=0.84.0",
    "anywidget>=0.9.21",
    "asimpy>=0.14.0",
    "cartopy>=0.25.0",
    "cfgrib>=0.9.15.1",
    "dagster>=1.12.17",
    "dask>=2026.1.2",
    "duckdb>=1.4.4",
    "faker>=40.5.1",
    "geopandas>=1.1.3",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.4",
    "luigi>=3.7.3",
    "marimo>=0.19.9",
    "marimo-chem-utils>=0.2.4",
    "matplotlib>=3.10.8",
    "metaflow>=2.19.20",
    "metpy>=1.7.1",
    "numpy>=2.4.2",
    "odc-stac>=0.5.2",
    "pandas>=3.0.1",
    "polars>=1.38.1",
    "pydantic-ai-slim>=1.67.0",
    "pyproj>=3.7.2",
    "pystac>=1.14.3",
    "pystac-client>=0.9.0",
    "rasterio>=1.5.0",
    "rdkit>=2025.9.6",
    "rioxarray>=0.22.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
    "sqlglot>=29.0.1",
    "traitlets>=5.14.3",
    "useful-rdkit-utils>=0.96",
    "vega-datasets>=0.9.0",
    "xarray>=2026.2.0",
    "xarray-spatial>=0.9.1",
]

[dependency-groups]
dev = [
    "build>=1.4.0",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "twine>=6.2.0",
]
