[project]
name = "nb"
version = "0.1.0"
description = "notebook experimentation"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Greg Wilson", email = "gvwilson@third-bit.com"},
]
license = {text = "MIT"}
dependencies = [
    "altair>=6.0.0",
    "anthropic>=0.84.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.4",
    "marimo>=0.19.9",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "polars>=1.38.1",
    "pydantic-ai-slim>=1.67.0",
]

[dependency-groups]
dev = [
    "build>=1.4.0",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "twine>=6.2.0",
]
