[project]
name = "mew"
version = "0.4.0"
description = "Marimo Educational Widgets"
readme = "README.md"
authors = [
    {name = "Greg Wilson", email = "gvwilson@third-bit.com"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
]
requires-python = ">=3.13"
dependencies = [
    "anywidget>=0.9.21",
    "traitlets>=5.14.3",
]

[dependency-groups]
dev = [
    "build>=1.4.0",
    "marimo>=0.19.9",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "taskipy>=1.14.1",
    "twine>=6.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mew"]
artifacts = [
    "src/mew/js/*.js",
    "src/mew/js/*.js.map",
]

# For sdist, explicitly include these
[tool.hatch.build.targets.sdist]
artifacts = [
    "src/mew/js/*.js",
    "src/mew/js/*.js.map",
]

[project.urls]
Homepage = "https://github.com/gvwilson/mew"
Documentation = "https://github.com/gvwilson/mew#readme"
Repository = "https://github.com/gvwilson/mew"

[tool.taskipy.tasks]
build = {help = "build package", cmd = """
cd js &&
npm run build &&
cd - &&
rm -rf src/mew/js &&
cp -r js/dist src/mew/js &&
python -m build
"""}
check = {help = "check code issues", cmd = "ruff check ."}
clean = {help = "clean up", cmd = """
rm -rf ./dist &&
find . -path './.venv' -prune -o -type d -name '__pycache__' -exec rm -rf {} + &&
find . -path './.venv' -prune -o -type f -name '*~' -exec rm {} +
"""}
fix = {help = "fix code issues", cmd = "ruff check --fix ."}
format = {help = "format code", cmd = "ruff format ."}
test = {help = "run tests", cmd = "pytest tests"}
